spud (0.20-1) unstable; urgency=low

  * Improve formatting of AJAX lists.
  * Disable auth checks in AJAX lookups.

 -- Brian May <bam@debian.org>  Thu, 29 Dec 2011 11:01:06 +1100

spud (0.19-1) unstable; urgency=low

  * Bug fixes.
  * Support django-ajax-select 1.2.3.

 -- Brian May <bam@debian.org>  Wed, 28 Dec 2011 15:49:28 +1100

spud (0.18-1) unstable; urgency=low

  * Improve Javascript.
  * Improve other stuff.

 -- Brian May <bam@debian.org>  Fri, 15 Jul 2011 10:41:33 +1000

spud (0.17-1) unstable; urgency=low

  * Fix various broken things.

 -- Brian May <bam@debian.org>  Fri, 08 Jul 2011 15:07:00 +1000

spud (0.16-1) unstable; urgency=low

  * Update style.
  * Improve Javascript code.
  * Convert floats to inline-blocks.
  * Fix error conditions.

 -- Brian May <bam@debian.org>  Sun, 03 Jul 2011 11:40:55 +1000

spud (0.15-1) unstable; urgency=low

  * Store image sizes in database.
  * Fix quirks in user interface. e.g. image resized after it is displayed.

 -- Brian May <bam@debian.org>  Thu, 30 Jun 2011 16:10:35 +1000

spud (0.14-1) unstable; urgency=low

  * Experimental changes designed to improve mobile phone experience.

 -- Brian May <bam@debian.org>  Wed, 29 Jun 2011 18:29:31 +1000

spud (0.13-1) unstable; urgency=low

  * Fix error templates.

 -- Brian May <bam@debian.org>  Fri, 24 Jun 2011 11:56:23 +1000

spud (0.12-1) unstable; urgency=low

  * Update standards version to 3.9.2.
  * Fix XHTML Errors.
  * Split django-webs stuff into separate package.

 -- Brian May <bam@debian.org>  Thu, 23 Jun 2011 11:59:13 +1000

spud (0.11-1) unstable; urgency=low

  * Remove whitespace after edit photo command.
  * New edit form.
  * Don't hardcode large image size.
  * Fix processing of actions.
  * Fix various issues surrounding photo relations.

 -- Brian May <bam@debian.org>  Tue, 03 May 2011 14:25:24 +1000

spud (0.10-1) unstable; urgency=low

  * Remove obsolete command line option to import program.
  * Various bugs fixed.